syntax = "proto3";

option csharp_namespace = "Proto";

package chat;

message ChatRequest {
	string chatId = 1;
	string message = 2;
	string messageChain = 3;
}

message ChatResponse {
	bool isOk = 1;
}

service ChatService {
	// Unary
	rpc Chat (ChatRequest) returns (ChatResponse) {}
}